Added a background to my old web app

--- a/src/app/learningobjects/learningobjects.component.css
+++ b/src/app/learningobjects/learningobjects.component.css
@@ -1,5 +1,5 @@
 .jumbotron{
-    background: url("http://www.4usky.com/data/out/80/164724016-science-wallpapers.jpg");
+    background: url("https://wallpapertag.com/wallpaper/full/4/2/0/461650-full-size-scientific-dna-wallpapers-1920x1080-hd.jpg");
 }
 h2{
     color: black;
